// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toODataQuery should convert empty State 1`] = `
{
  "orderBy": undefined,
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert no sorting 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "field": "abc",
            "operator": {
              "name": "equals",
              "toODataString": [Function],
            },
            "value": "xyz",
          },
        ],
        "logic": "or",
      },
    ],
    "logic": "or",
  },
  "orderBy": undefined,
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert state with Child Filter 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "childTable": "abc/bdf",
            "field": "xyz",
            "linqOperation": "any",
            "operator": {
              "name": "equals",
              "toODataString": [Function],
            },
            "value": "123",
          },
        ],
        "logic": "or",
      },
    ],
    "logic": "or",
  },
  "orderBy": [
    {
      "dir": "asc",
      "field": "abc",
    },
    {
      "dir": "desc",
      "field": "xyz",
    },
  ],
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert state with parent Filters 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "field": "abc/bdf/xyz",
            "operator": {
              "name": "equals",
              "toODataString": [Function],
            },
            "value": "123",
          },
        ],
        "logic": "or",
      },
    ],
    "logic": "or",
  },
  "orderBy": [
    {
      "dir": "asc",
      "field": "abc",
    },
    {
      "dir": "desc",
      "field": "xyz",
    },
  ],
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert typical State 1`] = `
{
  "filter": {
    "filters": [
      {
        "filters": [
          {
            "field": "abc",
            "operator": {
              "name": "equals",
              "toODataString": [Function],
            },
            "value": "xyz",
          },
        ],
        "logic": "or",
      },
    ],
    "logic": "or",
  },
  "orderBy": [
    {
      "dir": "asc",
      "field": "abc",
    },
    {
      "dir": "desc",
      "field": "xyz",
    },
  ],
  "skip": undefined,
  "top": undefined,
}
`;

exports[`toODataQuery should convert with no filters 1`] = `
{
  "orderBy": [
    {
      "dir": "asc",
      "field": "abc",
    },
    {
      "dir": "desc",
      "field": "xyz",
    },
  ],
  "skip": undefined,
  "top": undefined,
}
`;
